gforge (4.7.2-5+2) experimental; urgency=low

  * Use Unix sockets to connect to the DB in the Perl scripts.
  * Added db_stop to fix gforge-dns-bind9's postinst script from hanging.

 -- Roland Mas <lolando@debian.org>  Wed, 08 Apr 2009 11:24:38 +0200

gforge (4.7.2-5) experimental; urgency=low

  * Small tweak in fr.po to fix links to statistics and project reporting
    pages from the project summary page.
  * Fixed project reporting graphs.

 -- Roland Mas <lolando@debian.org>  Tue, 07 Apr 2009 18:54:09 +0200

gforge (4.7.2-4) experimental; urgency=low

  * Quick fix for a bug in uploading attachments to forum posts.  A proper
    fix requires a change in the DB schema, and will be implemented in
    trunk rather than in the 4.7 series.
  * Removed database password from a world-readable file.
  * Fixed require directives in cronjobs (again, this is only for the 4.7
    series as it won't be needed on trunk).
  * Fixed date printing and parsing in activity tab, where the expected
    format for date input didn't match the one used for display (which
    depended on locale).

 -- Roland Mas <lolando@debian.org>  Thu, 02 Apr 2009 16:41:35 +0200

gforge (4.7.2-3) experimental; urgency=low

  * Removed another error message from the mediawiki plugin for
    non-connected users.

 -- Roland Mas <lolando@debian.org>  Thu, 26 Mar 2009 18:36:40 +0100

gforge (4.7.2-2) experimental; urgency=low

  * Removed automatic creation of the Mediawiki users on session opening
    (since it caused problems and users are authenticated on the fly when
    they access a MW page).
  * Also removed a few error messages that were displayed above the wiki
    pages.

 -- Roland Mas <lolando@debian.org>  Thu, 26 Mar 2009 17:00:09 +0100

gforge (4.7.2-1) experimental; urgency=low

  * New upstream bugfix release.
  * Fixed mediawiki plugin for Mediawiki 1.12.

 -- Roland Mas <lolando@debian.org>  Fri, 20 Mar 2009 14:06:17 +0100

gforge (4.7.1-2) experimental; urgency=low
